--- a/.config
+++ b/.config
@@ -17,8 +17,11 @@ CONFIG_LUCI_LANG_zh_Hans=y
 ## 主题
 CONFIG_PACKAGE_luci-theme-argon=y
 CONFIG_PACKAGE_luci-app-argon-config=y
+CONFIG_PACKAGE_luci-theme-bootstrap=y
 
 # 软件包
+CONFIG_PACKAGE_luci-app-openclash=y
+CONFIG_PACKAGE_luci-app-adguardhome=y
 ## ddns
 CONFIG_PACKAGE_luci-app-ddns=n
 CONFIG_PACKAGE_ddns-scripts=n
